Se obtiene Tcambio y se calcula el valor de dolares a pesos para su conversion.

--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -54,7 +54,7 @@ $(function ()
                             <td> <?php echo $this->fechaSalida; ?></td>
                         </tr>
                         <tr>
-                            <td><b>Precio</b>:</td>
+                            <td><b>Precio Total</b>:</td>
                             <td style="color:#F00;"> <b><?php echo $this->precio; ?></b></td>
                         </tr>
                         <tr>
