Separando cartas de confirmación.

--- a/views/cartas/travelclub.phtml
+++ b/views/cartas/travelclub.phtml
@@ -356,94 +356,48 @@
         
         <br />
         <br />
-        <p style="text-align: justify">
-            *** No incluye Tasas de Embarque ni Tax de Seguridad ***
-            <br /><br />
-            
-            EUROANDINO S.A.<br />
-            RUT: 96.985.620 - 4<br />
-            CTA CTE DOLARES: 5-169-09417-05 &nbsp;&nbsp; BANCO DE CHILE<br />
-            CTA CTE PESOS&nbsp;&nbsp;: 169-09417-00 &nbsp;&nbsp; BANCO DE CHILE
-            <br /><br />
-
-            AGRADECEREMOS ENVIAR JUNTO AL PAGO DE ESTA RESERVA, SU FACTURA POR COMISION. <br />
-
-            * LA EMISION DE TICKET SE REALIZARA SOLO CONTRA RECIBO DE IDENTIDAD OFICICIAL 
-            DEL CLIENTE SEG&Uacute;N  CORRESPONDE, PASAPORTE &Oacute; CARNE DE IDENTIDAD
-        </p>
         
         
         
         
-        <br />
-        <br />
-        <center>
-            <span style="font-weight: bold;">CONDICIONES GENERALES</span>
-        </center>
-        <br />
-        <p style="text-align: justify">
-        Precios p&uacute;blicos expresados en d&oacute;lares americanos, se entiende por persona, itinerario seg&uacute;n indicado, 
-        n&uacute;mero de noches, tipo de habitaci&oacute;n y servicios. <br /><br />
+        
+        <table width="100%" border="0" align="center" cellpadding="2" cellspacing="2" class="Base">
 
-        1.- El alojamiento esta considerado en habitaciones est&aacute;ndar, salvo que se especifique lo contrario. 
-        Validez seg&uacute;n especificado en la confirmaci&oacute;n de la reserva. <br /><br />
-
-        2.- Se incluye todos los servicios especificados en programa confirmado. Y no incluye extras de ning&uacute;n 
-        tipo, gastos de &iacute;ndole personal, tasas de aeropuerto (solo si as&iacute; se indica), exceso de equipaje, seguros 
-        de equipaje, transporte de animales, y cualquier otro gasto an&aacute;logo. Las excursiones opcionales son de
-        Adicionalmente, se debe consultar las condiciones del ticket a&eacute;reo
-        cargo de cada pasajero, a menos que este claramente especificado en el programa como incluido.<br /><br />
-
-        CAMBIO DE ITINERARIO Y HOTELES: el organizador se reserva el derecho de alterar en cualquier 
-        momento el itinerario, si es necesario para el confort y seguridad de los pasajeros y tambi&eacute;n cambiar los 
-        hoteles por otros similares de igual categor&iacute;a, as&iacute; como el horario de las salidas, sin necesidad de previo
-        aviso.<br /><br />
-
-        3.- Check IN/OUT: Los hoteles tienen como norma general el ingreso a las habitaciones desde las 14:00 
-        hrs. PM. En adelante y el horario de salida es antes de las 12:00 hrs. AM. La distribuci&oacute;n de las 
-        habitaciones de los hoteles, depender&aacute; de la disponibilidad al momento del check in a menos que se 
-        tenga confirmado tipo de habitaci&oacute;n especifica. En general los hoteles cuentan solo con dos camas
-        grandes con dimensiones similares a tama&ntilde;o queen en las habitaciones, por lo que el alojamiento de
-        habitaciones triples y cu&aacute;druples se har&aacute; compartiendo las camas.<br /><br />
-
-        DOCUMENTACION:
-        Sin excepci&oacute;n, todo pasajero deber&aacute;n tener en regla sus documentos, siendo esto responsabilidad del 
-        mismo &oacute; de la Agencia de Viajes,  en ning&uacute;n caso ser&aacute; EUROANDINO responsable de la imposibilidad de 
-        viajar de los pasajeros debido a la falta de documentaci&oacute;n en regla, cualquiera sea la naturaleza de 
-        esta, ni por los gastos adicionales causados por lo mismo.<br /><br />
-
-        PAGOS Y CANCELACIONES:
-        Al recibir confirmaci&oacute;n de los servicios la Agencia de viajes deber&aacute; efectuar el pago total de los servicios 
-        solicitados y confirmados.
-        La cancelaci&oacute;n de servicios, supondr&aacute; un cargo al pasajero por concepto de gastos operacionales, valor 
-        que ser&aacute; indicado en cada caso. Toda cancelaci&oacute;n debe ser comunicada por escrito a EUROANDINO.<br /><br />
-
-        Reclamos de reembolso deber&aacute;n ser dirigidos a la oficina vendedora dentro de un plazo de no m&aacute;s de 30 
-        d&iacute;as a contar de la fecha de t&eacute;rmino del viaje. El reclamo deber&aacute; acompa&ntilde;arse con una nota del gu&iacute;a o 
-        carta escrita del hotel por servicios no utilizados y sus razones. <br /><br />
-
-        ASISTENCIA DE VIAJES & RESPONSABILIDADES:
-        EUROANDINO solicita a todos sus clientes viajar con asistencia de viajes, en emergencias m&eacute;dicas,
-        perdida de equipaje, interrupci&oacute;n y m&aacute;s, es importante informar si el cliente ya cuanta con este servicio 
-        de no ser as&iacute; contamos con SEGURVIAJE.<br /><br />
-
-        EUROANDINO, declara expl&iacute;citamente que obra solo como intermediario entre las agencias de viajes y 
-        las entidades o personas que proporcionen los servicios que constan en los itinerarios de servicios 
-        otorgados y espec&iacute;ficos en cada voucher, como empresas de transporte, hoteles, restaurantes, 
-        excursiones, etc.<br /><br />
-
-        EUROANDINO, no se hace responsable por da&ntilde;os, heridas, accidentes, retrasos o irregularidades que 
-        pudiesen ocurrir durante la ejecuci&oacute;n de los servicios, as&iacute; como la perdida del equipaje y dem&aacute;s objetos 
-        de su propiedad: por las malas condiciones atmosf&eacute;ricas, decisiones gubernamentales, cat&aacute;strofes 
-        naturales y dem&aacute;s sucesos que puedan ocurrir fuera del control de EUROANDINO. En caso de existir 
-        imposibilidad de prestar algunos de los servicios en las condiciones pactadas ya sea total o parcial, 
-        EUROANDINO reembolsara al viajero las cantidades debidas por los servicios no realizados con exclusi&oacute;n 
-        de cualquier otro compromiso. <br />
-        Cuando el pasajero viaja en autom&oacute;vil debe someterse a las leyes del pa&iacute;s en el cual esta matriculado el 
-        veh&iacute;culo en caso de accidente. EUROANDINO se reserva el derecho de cambiar el orden de los servicios 
-        indicados en el folleto, por motivo de una mejor realizaci&oacute;n o causas que as&iacute; lo justifiquen.
-
-        </p>
+        <tr class="TopBot">
+        	<td colspan="3">DEPARTAMENTO RESERVA</td>
+		</tr>
+	</table>
+    <br />	<br />
+	
+	<center><span style="font-weight: bold;">CONDICIONES GENERALES BLOQUEOS Y CHARTER</span></center><br />
+    <ul type="disc">
+     <!-- <li>Los precios publicados incluyen solo lo especificado en cada programa. Los servicios no utilizados no ser&aacute;n reembolsables.</li>
+      <li>Una vez confirmada la       reserva, se solicitar&aacute; el pago total o un abono m&iacute;nimo de <strong>USD 450.- por pasajero para Sudam&eacute;rica, USD 650.-       Caribe, USA, Isla de Pascua,&nbsp; USD 1.200.-       Europa</strong>, &eacute;stos deben ser pagados dentro de las 48 horas de       recibida la confirmaci&oacute;n, de lo contrario se anular&aacute; la reserva       autom&aacute;ticamente.&nbsp; El saldo deber&aacute; ser pagado en su totalidad a m&aacute;s       tardar 10 d&iacute;as h&aacute;biles a contar del recibo del abono.&nbsp; En caso de       haberse confirmado la reserva 35 d&iacute;as antes de la salida, el pago deber&aacute;       ser total.&nbsp; </li> -->
+      <li><u>Bloqueos       a&eacute;reos: </u><br />
+    -No permiten  cambios ni correcciones de;&nbsp; fecha,  nombre, g&eacute;nero y rut.<br />
+      -No permite  reserva de asiento ni pre-chequeo, los asientos ser&aacute;n asignados por parte de la  compa&ntilde;&iacute;a a&eacute;rea en el momento del check in en el aeropuerto.<br />
+      -No permite  devoluci&oacute;n. <br />
+      -Los pasajes  ser&aacute;n entregados 7 d&iacute;as antes de la salida</li>
+      <li>Los gastos de anulaci&oacute;n de servicios terrestres, quedan  supeditados a las pol&iacute;ticas de los distintos hoteles y proveedores tur&iacute;sticos  involucrados en cada uno de los programas.</li>
+      <li><u>Charter</u>:<br />
+      </li>
+    -Permite  cambio de nombre hasta 5 d&iacute;as antes de la salida.&nbsp; No permite cambio de fecha.<br />
+    -Los asientos  son asignados por orden de fecha de compra y procurando que las familias queden  juntas.<br />
+      -Anulaciones  anterior<strong> 30  d&iacute;as de la salida, se retiene el equivalente al abono m&iacute;nimo</strong>.<br />
+      Entre 29 y 15 d&iacute;as antes de la  salida: 60% de penalidad sobre el valor total del programa. <br />
+      Entre 14 y 10 d&iacute;as antes de la  salida: 80% de penalidad sobre el valor del programa.<br />
+      Entre 9 y 0 d&iacute;as antes de la  salida: 100% de penalidad sobre el valor total del programa. <br />
+      En caso de no presentaci&oacute;n en el  aeropuerto o impedimento para salir del pa&iacute;s, no existir&aacute; ning&uacute;n tipo de  devoluci&oacute;n o cambio de fecha, por lo que se solicita chequear la documentaci&oacute;n  de viaje.
+    
+      <li>Los       cargos de seguridad y combustible son parte del valor del programa, por lo       tanto no tiene devoluci&oacute;n en caso de anulaci&oacute;n. Se encuentran sujetos a       variaci&oacute;n por parte de la cia. a&eacute;rea, &eacute;stos se congelan solamente con el       pago&nbsp;total del viaje.&nbsp; Las       tasas de embarque son 100% reembolsables.</li>
+     
+	 <!-- <li>Alojamiento:       Los horarios de check in y check out son fijados por cada hotel.&nbsp; En general las habitaciones est&aacute;n       disponibles para su ingreso a partir de las 15:00 hrs y la salida debe ser       antes de las 12:00 PM. Las salidas despu&eacute;s del horario establecido       facultan al hotel a cobrar un day use o bien una noche extra.</li>
+      <li>Las       excursiones regulares podr&iacute;an estar sujetas a modificaci&oacute;n en destino por       parte del operador local en d&iacute;a y horario por razones de operatividad u       otros motivos para la realizaci&oacute;n de las mismas, esto es informado       oportunamente por el operador en destino a los pasajeros. </li>
+      <li>Si por       motivos externos a la responsabilidad de Panamericana tales como:       condiciones clim&aacute;ticas, sismos, problemas pol&iacute;ticos, etc. Obligue a       modificar el programa y esto implique costos adicionales, &eacute;stos deben ser       asumidos por cuenta del pasajero.</li>
+      <li>Documentaci&oacute;n:       Es obligaci&oacute;n&nbsp;del pasajero contar con la documentaci&oacute;n de viaje al d&iacute;a       (C&eacute;dula de identidad, pasaportes, visados, autorizaciones notariales, etc.)       y de cualquier otro requisito necesarios para ingresar al lugar de destino       ya sea adulto o menor.&nbsp; </li>
+      <li>Panamericana       Turismo declina toda responsabilidad por cancelaciones, atrasos, cambios       de horarios y de fecha determinados por las aerol&iacute;neas.</li>
+      <li>Conocimiento       de condiciones, con la compra de un programa, queda autom&aacute;ticamente       establecido que el agente de viajes y cliente se notifican y aceptan todas       las condiciones generales para bloqueos y charter.</li> -->
+    </ul>
         
         
         
